# de-idle

./: Cargo.toml  README.md  Trunk.toml  index.html  pts.txt
docs/: app-95adef8c3521bd01.css  de-idle-85cfb344c33b069a.js  de-idle-85cfb344c33b069a_bg.wasm  index.html
src/: main.rs  sliding3.rs
src/game_state/: buildings.rs  mod.rs  resources.rs  tests.rs  workers.rs
src/ui/: actor.rs  dashboard.rs  goals.rs  messages.rs  mod.rs  plot.rs  tabs.rs
src/ui/goal_checkers/: exponential.rs  linear.rs  mod.rs  quadratic.rs  sinusoidal.rs  tests.rs
src/utils/: matrix.rs  mod.rs  point.rs  sequence.rs
www/: app.css  index.html
