[package]
name = "de-idle"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-channel = "0.3"
futures-util = "0.3"
gloo-timers = "0.3.0"
gloo-utils = { version = "0.2", features = ["serde"] }
plotters = { version = "0.3", default-features = false, features = ["line_series"] }
plotters-backend = "0.3"
plotters-canvas = "0.3"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "CssStyleDeclaration",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlSelectElement",
  "Node",
  "Window",
]
